feature(jdk-17): Fix test dependencies (PowerMockito, mockito) + fix tests.
Upgrading mockito/powermockito version was needed,
as well as some refactor to adapt test to the new version of mockito
(e.g., anyString() doesn't match null anymore).