@@ -41,7 +41,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
-                    <argLine>-Dqpid.amqp.version=0-91</argLine> <!-- set protocol version of amqp unit test -->
+<!--                    <argLine></argLine> &lt;!&ndash; set protocol version of amqp unit test &ndash;&gt;-->
+                    <argLine>-Dqpid.amqp.version=0-91 --add-opens java.base/java.nio.charset=ALL-UNNAMED --add-opens
+                        java.base/java.lang.reflect=ALL-UNNAMED --add-opens
+                        java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/sun.nio.cs=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens
+                        java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
+                        java.base/java.net=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED --add-opens
+                        java.base/java.nio.file=ALL-UNNAMED --add-opens java.base/sun.nio.fs=ALL-UNNAMED
+                    </argLine> <!-- Java arguments line to open modules that are required for the test -->
                 </configuration>
             </plugin>
         </plugins>
